# term-dx

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: aws-kubernetes-access.mdc  bash-scripting.mdc  branch-workflow.mdc  git-commit-pr-messages.mdc  infrastructure-context.mdc  jira-atlassian.mdc  pr-review.mdc  team-identities.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release-please.yml
src/term_dx/: __init__.py  cli.py  config.py  diagnose.py  kubectl.py
tests/: test_cli.py  test_config.py
