[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "term-dx"
version = "0.1.0"
description = "List and diagnose Kubernetes resources stuck in Terminating state"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Eric Skaggs", email = "ericskaggs@gmail.com" }]
dependencies = [
  "click>=8.1",
]

[project.scripts]
term-dx = "term_dx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
